add ecommerce faqs

--- a/src/components/ui/pricing/CardHeading.astro
+++ b/src/components/ui/pricing/CardHeading.astro
@@ -17,7 +17,7 @@ const {
 ---
 
 <div
-  class="h-36 py-5 px-5 lg:px-10 xl:px-15 2xl:px-20 flex flex-col justify-center items-center bg-stone-100 rounded-lg"
+  class="h-44 md:lg:40 lg:h-36 py-5 px-5 lg:px-10 xl:px-15 2xl:px-20 flex flex-col justify-center items-center bg-stone-100 rounded-lg"
 >
   <h2 class=`${nameColour} ${nameSize} text-center font-bold`>{name}</h2>
   {
