--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -5,7 +5,7 @@ import CardHeading from "../../components/ui/pricing/CardHeading.astro";
 import FeatureTable from "../../components/ui/pricing/FeatureTable.astro";
 import FeatureCardWrapper from "../../components/ui/pricing/FeatureCardWrapper.astro";
 import Accordion from "../../components/ui/Accordion";
-import { faqs } from "../../const/pricingFaqs";
+import { faqs } from "../../const/websitePricingFaqs";
 import {
   starterFeatures,
   plusFeatures,
@@ -252,3 +252,4 @@ const customFunctionalitiesExamples = [
     </section>
   </main>
 </PageLayout>
+../../const/websitePricingFaqs
