--- a/src/pages/pricing/ecommerce.astro
+++ b/src/pages/pricing/ecommerce.astro
@@ -12,6 +12,7 @@ import FeatureCardWrapper from "../../components/ui/pricing/FeatureCardWrapper.a
 import FeatureTable from "../../components/ui/pricing/FeatureTable.astro";
 import { commerceFAQs } from "../../const/commercePricingFaqs";
 import Accordion from "../../components/ui/Accordion";
+import PrecheckedToggle from "../../components/ui/buttons/PrecheckedToggle.astro";
 ---
 
 <PageLayout
@@ -25,14 +26,9 @@ import Accordion from "../../components/ui/Accordion";
     <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
       Transparent and simple pricing. No surprises.
     </p>
-    <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
-      <span>Looking for</span>
-      <a
-        href="/pricing/websites"
-        class="underline underline-2 hover:no-underline"
-        >regular website pricing plans</a
-      >?
-    </p>
+    <div class="flex justify-center">
+      <PrecheckedToggle href="/pricing/websites" checked={true} />
+    </div>
     <div
       class="mt-10 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-6 md:gap-6 lg:gap-8 xl:gap-10 2xl:gap-x-16"
     >
