--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -12,6 +12,7 @@ import {
   proFeatures,
   enterpriseFeatures,
 } from "../../const/planFeatures";
+import PrecheckedToggle from "../../components/ui/buttons/PrecheckedToggle.astro";
 
 const customFunctionalitiesExamples = [
   "Login portal",
@@ -32,14 +33,10 @@ const customFunctionalitiesExamples = [
     <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
       Transparent and simple pricing. No surprises.
     </p>
-    <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
-      <span>Looking for</span>
-      <a
-        href="/pricing/ecommerce"
-        class="underline underline-2 hover:no-underline"
-        >e-commerce pricing plans</a
-      >?
-    </p>
+    <div class="flex justify-center">
+      <PrecheckedToggle href="/pricing/ecommerce" checked={false} />
+    </div>
+
     <div
       class="mt-10 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-6 md:gap-6 lg:gap-8 xl:gap-10 2xl:gap-x-16"
     >
@@ -251,5 +248,4 @@ const customFunctionalitiesExamples = [
       </div>
     </section>
   </main>
-</PageLayout>
-../../const/websitePricingFaqs
+</PageLayout>../../const/websitePricingFaqs
