restyle: footer and nav bar padding

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -5,10 +5,10 @@ import CopyEmail from "./buttons/CopyEmail.astro";
 
 <footer class="py-10 bg-[#F6F6F6] bg-opacity-40 text-gray-800">
   <nav
-    class="mx-5 lg:mx-20 flex flex-col gap-10 lg:gap-0 lg:flex-row lg:justify-between items-center"
+    class="px-5 md:px-10 lg:px-20 xl:px-44 2xl:px-52 flex flex-col gap-10 lg:gap-0 lg:flex-row lg:justify-between items-center"
   >
     <a href="/" class="inline-flex flex-col items-center">
-      <Logo styles="h-auto w-20" />
+      <Logo styles="h-auto w-12 lg:w-16" />
       <span class="text-lg">Wesley Jessie</span>
     </a>
     <div
