--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -3,6 +3,8 @@ import Logo from "../icons/Logo.astro";
 import ArrowColourButton from "./buttons/ArrowColourButton.astro";
 import Buttons from "./buttons/Buttons.astro";
 import HamburgerMenu from "./HamburgerMenu.astro";
+
+const desktopNavLinksStyles = "text-base text-gray-500 hover:text-gray-800";
 ---
 
 <style>
@@ -21,21 +23,25 @@ import HamburgerMenu from "./HamburgerMenu.astro";
   }
 </style>
 
-<header class="px-5 lg:px-20 z-50 sticky top-0 backdrop-blur-sm pt-7 pb-5">
+<header
+  class="px-5 md:px-10 lg:px-20 xl:px-44 2xl:px-52 z-50 sticky top-0 backdrop-blur-sm pt-7 pb-5"
+>
   <nav
     role="navigation"
     aria-label="navigation menu"
     class="flex justify-between items-center"
   >
-    <div class="flex items-center gap-8">
+    <div class="flex items-center">
       <a href="/">
         <Logo styles="w-12 h-auto lg:w-16" />
       </a>
-      <a class="hidden lg:block text-sm">Pricing</a>
-      <a class="hidden lg:block text-sm">Serivces</a>
-      <a class="hidden lg:block text-sm">My work</a>
-      <a class="hidden lg:block text-sm">About me</a>
-      <a class="hidden lg:block text-sm">FAQ</a>
+      <div class="ml-12 hidden gap-12 lg:flex">
+        <a href="/pricing/websites" class={desktopNavLinksStyles}>Pricing</a>
+        <a class={desktopNavLinksStyles}>Serivces</a>
+        <a class={desktopNavLinksStyles}>My work</a>
+        <a class={desktopNavLinksStyles}>About me</a>
+        <a class={desktopNavLinksStyles}>FAQ</a>
+      </div>
     </div>
     <Buttons
       isHiddenForMobile
@@ -57,7 +63,7 @@ import HamburgerMenu from "./HamburgerMenu.astro";
           text="Pricing"
           borderColour="border-[#FA8787]"
           arrowColour="stroke-[#FA8787]"
-          href="/"
+          href="/pricing/websites"
         />
       </li>
       <li class="mt-6">
@@ -93,7 +99,11 @@ import HamburgerMenu from "./HamburgerMenu.astro";
         />
       </li>
       <li class="mt-20">
-        <Buttons text="Contact me" buttonType="mobileMenuPrimary" href="/" />
+        <Buttons
+          text="Contact me"
+          buttonType="mobileMenuPrimary"
+          href="/contact-me"
+        />
       </li>
     </ul>
   </nav>
