--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,6 +1,9 @@
 ---
 import Logo from "../icons/Logo.astro";
 import CopyEmail from "./buttons/CopyEmail.astro";
+
+const footerLinkStyles =
+  "text-sm xl:text-base text-gray-500 hover:text-gray-800";
 ---
 
 <footer class="py-10 bg-[#F6F6F6] bg-opacity-40 text-gray-800">
@@ -14,12 +17,11 @@ import CopyEmail from "./buttons/CopyEmail.astro";
     <div
       class="inline-flex flex-col text-center lg:text-left lg:flex-row gap-3 lg:gap-6 xl:gap-12"
     >
-      <a class="text-sm xl:text-base text-gray-500">Home</a>
-      <a class="text-sm xl:text-base text-gray-500">Pricing</a>
-      <a class="text-sm xl:text-base text-gray-500">Serivces</a>
-      <a class="text-sm xl:text-base text-gray-500">My work</a>
-      <a class="text-sm xl:text-base text-gray-500">About me</a>
-      <a class="text-sm xl:text-base text-gray-500">FAQ</a>
+      <a href="/" class={footerLinkStyles}>Home</a>
+      <a href="/pricing/websites" class={footerLinkStyles}>Pricing</a>
+      <a class={footerLinkStyles}>Serivces</a>
+      <a class={footerLinkStyles}>My work</a>
+      <a class={footerLinkStyles}>About me</a>
     </div>
     <div
       class="inline-flex text-center lg:text-left flex-col items-center lg:items-start"
