fix: impor text shown in body

--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -248,4 +248,4 @@ const customFunctionalitiesExamples = [
       </div>
     </section>
   </main>
-</PageLayout>../../const/websitePricingFaqs
+</PageLayout>
