--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ import PageLayout from "../layout/PageLayout.astro";
   description="Get custom made websites that stand out from templates. Life time gurantee."
   bodyStyles="flex flex-col min-h-screen"
 >
-  <main class="mx-10 flex-1 flex flex-col justify-center items-center">
+  <main class="mx-10 my-20 flex-1 flex flex-col justify-center items-center">
     <h1
       class="font-bold text-3xl md:text-4xl lg:text-5xl xl:text-6xl lg:max-w-5xl xl:max-w-7xl 2xl:max-w-8xl py-2 text-center overflow-hidden"
     >
