add placeholder page

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -19,9 +19,9 @@ const footerLinkStyles =
     >
       <a href="/" class={footerLinkStyles}>Home</a>
       <a href="/pricing/websites" class={footerLinkStyles}>Pricing</a>
-      <a class={footerLinkStyles}>Serivces</a>
-      <a class={footerLinkStyles}>My work</a>
-      <a class={footerLinkStyles}>About me</a>
+      <a href="/coming-soon" class={footerLinkStyles}>Serivces</a>
+      <a href="/coming-soon" class={footerLinkStyles}>My work</a>
+      <a href="/coming-soon" class={footerLinkStyles}>About me</a>
     </div>
     <div
       class="inline-flex text-center lg:text-left flex-col items-center lg:items-start"
