--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -37,9 +37,9 @@ const desktopNavLinksStyles = "text-base text-gray-500 hover:text-gray-800";
       </a>
       <div class="ml-12 hidden gap-12 lg:flex">
         <a href="/pricing/websites" class={desktopNavLinksStyles}>Pricing</a>
-        <a class={desktopNavLinksStyles}>Serivces</a>
-        <a class={desktopNavLinksStyles}>My work</a>
-        <a class={desktopNavLinksStyles}>About me</a>
+        <a href="/coming-soon" class={desktopNavLinksStyles}>Serivces</a>
+        <a href="/coming-soon" class={desktopNavLinksStyles}>My work</a>
+        <a href="/coming-soon" class={desktopNavLinksStyles}>About me</a>
       </div>
     </div>
     <Buttons
