--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -28,7 +28,7 @@ const footerLinkStyles =
     >
       <p>wesley@wesleyjessie.com</p>
       <CopyEmail />
-      <p class="mt-3">07597296544</p>
+      <p class="mt-3">+44 7597 296544</p>
     </div>
   </nav>
 </footer>
