content: call "plans" "packages" instead

--- a/src/pages/pricing/ecommerce.astro
+++ b/src/pages/pricing/ecommerce.astro
@@ -16,8 +16,8 @@ import PrecheckedToggle from "../../components/ui/buttons/PrecheckedToggle.astro
 ---
 
 <PageLayout
-  title="E-commerce Pricing Plans - Freelance Web development"
-  description="Transparent and simple pricing. No surprises. Choose the plan right for you."
+  title="E-commerce Pricing Packages - Freelance Web development"
+  description="Transparent and simple pricing. No surprises. Choose the Package right for you."
 >
   <main class="mt-10 mx-6 lg:mx-8 min-h-screen">
     <h1 class="font-bold text-center text-4xl md:text-7xl xl:text-8xl">
@@ -62,8 +62,10 @@ import PrecheckedToggle from "../../components/ui/buttons/PrecheckedToggle.astro
       />
     </div>
 
-    <h2 class="mt-20 font-bold text-center text-5xl md:text-6xl xl:text-7xl">
-      Which plan will I need?
+    <h2
+      class="mt-20 font-bold text-center text-5xl md:text-6xl xl:text-7xl leading-tight md:leading-none"
+    >
+      Which package will I need?
     </h2>
     <div class="grid grid-cols-1 justify-items-center">
       <FeatureCardWrapper>
@@ -71,7 +73,7 @@ import PrecheckedToggle from "../../components/ui/buttons/PrecheckedToggle.astro
           name="Number of products"
           nameSize="text-2xl md:text-3xl lg:text-4xl"
           nameColour="text-gray-800"
-          description="All plans support unlimited products. But you may want Plus or Pro features to help your customers browse your products."
+          description="All packages support unlimited products. But you may want Plus or Pro features to help your customers browse your products."
           descriptionColour="text-gray-500"
         />
         <div class="border-t-2 border-gray-500 mb-10">
@@ -99,7 +101,7 @@ import PrecheckedToggle from "../../components/ui/buttons/PrecheckedToggle.astro
           </div>
           <div class="mt-2 text-center">
             <span class="text-gray-500"
-              >All plans support unlimited products. But when you have many
+              >All packages support unlimited products. But when you have many
               products, your customers will need a search and organisation
               system to help them browse.</span
             >
@@ -160,13 +162,13 @@ import PrecheckedToggle from "../../components/ui/buttons/PrecheckedToggle.astro
         >
           <div class="mt-5 text-gray-500 text-center">
             <span
-              >The Starter plan focuses on delivering a modern website within a
-              short turnaround time.
+              >The Starter package focuses on delivering a modern website within
+              a short turnaround time.
             </span>
           </div>
           <div class="mt-5 text-base text-gray-500 text-center">
             <span
-              >The Plus and Pro plan focus on crafting a unique and engaging
+              >The Plus and Pro packages focus on crafting a unique and engaging
               website that truly represents your brand. The design process
               therefore includes weekly meetings to identify brand identity and
               share design mock ups.
