--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -23,8 +23,8 @@ const customFunctionalitiesExamples = [
 ---
 
 <PageLayout
-  title="Pricing Plans - Freelance Web development"
-  description="Transparent and simple pricing. No surprises. Choose the plan right for you."
+  title="Pricing Packages - Freelance Web development"
+  description="Transparent and simple pricing. No surprises. Choose the package right for you."
 >
   <main class="mt-10 mx-6 lg:mx-8">
     <h1 class="font-bold text-center text-6xl md:text-7xl xl:text-8xl">
@@ -70,8 +70,10 @@ const customFunctionalitiesExamples = [
         nameColour="text-theme-purple"
       />
     </div>
-    <h2 class="mt-20 font-bold text-center text-5xl md:text-6xl xl:text-7xl">
-      Which plan will I need?
+    <h2
+      class="mt-20 font-bold text-center text-5xl md:text-6xl xl:text-7xl leading-tight md:leading-none"
+    >
+      Which package will I need?
     </h2>
     <div class="grid grid-cols-1 justify-items-center">
       <FeatureCardWrapper>
@@ -121,8 +123,8 @@ const customFunctionalitiesExamples = [
             </li>
           </ul>
           <p class="mt-4 text-center lg:text-left text-gray-500">
-            An enquiry form (included in all plans) does not count as a page, if
-            you wish to put it on a seperate page.
+            An enquiry form (included in all packages) does not count as a page,
+            if you wish to put it on a seperate page.
           </p>
         </div>
       </FeatureCardWrapper>
@@ -211,13 +213,13 @@ const customFunctionalitiesExamples = [
         >
           <div class="mt-5 text-gray-500 text-center">
             <span
-              >The Starter plan focuses on delivering a modern website within a
-              short turnaround time.
+              >The Starter package focuses on delivering a modern website within
+              a short turnaround time.
             </span>
           </div>
           <div class="mt-5 text-base text-gray-500 text-center">
             <span
-              >The Plus and Pro plan focus on crafting a unique and engaging
+              >The Plus and Pro packages focus on crafting a unique and engaging
               website that truly represents your brand. The design process
               therefore includes weekly meetings to identify brand identity and
               share design mock ups.
