fix: typo in hero

--- a/src/components/sections/homePage/Hero.astro
+++ b/src/components/sections/homePage/Hero.astro
@@ -9,7 +9,7 @@ import Buttons from "../../ui/buttons/Buttons.astro";
     class="mt-2 max-w-xs md:max-w-lg lg:max-w-xl xl:max-w-2xl 2xl:max-w-3xl text-lg md:text-xl text-gray-500 text-center"
   >
     <span class="block">
-      A freelancer developer that builds you bespoke, stunning, and fast
+      A freelance developer that builds you bespoke, stunning, and fast
       websites.
     </span>
     <span class="block mt-1">
