add margin below subheading

--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -30,7 +30,7 @@ const customFunctionalitiesExamples = [
     <h1 class="font-bold text-center text-6xl md:text-7xl xl:text-8xl">
       Pricing
     </h1>
-    <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
+    <p class="mt-2 lg:text-lg 2xl:text-xl text-gray-500 text-center">
       Transparent and simple pricing. No surprises.
     </p>
     <div class="flex justify-center">
