--- a/src/pages/pricing/ecommerce.astro
+++ b/src/pages/pricing/ecommerce.astro
@@ -23,7 +23,7 @@ import PrecheckedToggle from "../../components/ui/buttons/PrecheckedToggle.astro
     <h1 class="font-bold text-center text-4xl md:text-7xl xl:text-8xl">
       E-commerce Pricing
     </h1>
-    <p class="lg:text-lg 2xl:text-xl text-gray-500 text-center">
+    <p class="mt-2 lg:text-lg 2xl:text-xl text-gray-500 text-center">
       Transparent and simple pricing. No surprises.
     </p>
     <div class="flex justify-center">
