--- a/src/components/sections/homePage/NoTemplateSection.astro
+++ b/src/components/sections/homePage/NoTemplateSection.astro
@@ -37,13 +37,13 @@ import SmallPargraph from "../../ui/text/SmallPargraph.astro";
       <SmallPargraph
         mt={false}
         title="Start the design process from you, not a template."
-        description="Make websites that work with your customers and business problems. Starting with template is like starting from the end. We start with the why."
+        description="Make websites that work with your customers and business problems. Starting with a template is like starting from the end. We start with the why."
       >
         <Brain slot="icon" styles="w-12 h-12 xl:w-14 xl:h-14" />
       </SmallPargraph>
       <SmallPargraph
         title="Enjoy fast performance."
-        description="Use industry standard frameworks and technologies to ensure yourwebsites will be blazingly fast."
+        description="Use industry standard frameworks and technologies to ensure your websites will be blazingly fast."
       >
         <Commet slot="icon" styles="w-12 h-12 xl:w-14 xl:h-14" />
       </SmallPargraph>
