content: missing "the"

--- a/src/pages/pricing/websites.astro
+++ b/src/pages/pricing/websites.astro
@@ -195,7 +195,7 @@ const customFunctionalitiesExamples = [
             row2Col1="Plus"
             row2Col2="One meeting per week to identify brand identity and share design mock ups."
             row3Col1="Pro"
-            row3Col2="One meeting per week as Plus. But this results in more total meetings as project will run longer. "
+            row3Col2="One meeting per week as Plus. But this results in more total meetings as the project will run longer. "
           />
           <FeatureTable
             isOneRowOneCell={true}
