make hero text work with Astro 3.0

--- a/src/components/sections/HeroText.astro
+++ b/src/components/sections/HeroText.astro
@@ -1,12 +1,5 @@
 <style>
   .rainbow {
-    background: linear-gradient(
-      90deg,
-      #fc1e1e 0%,
-      #ff9245 21.35%,
-      #5083ff 48.44%,
-      #ff660b 100%
-    );
     animation: shine 8s ease-in infinite;
   }
   @keyframes shine {
@@ -23,7 +16,7 @@
 </style>
 
 <h1
-  class="uppercase text-5xl md:text-6xl lg:text-7xl xl:text-8xl rainbow lg:max-w-5xl xl:max-w-7xl 2xl:max-w-8xl py-2 text-center font-bold text-transparent bg-clip-text bg-[length:300%_300%] rainbow"
+  class="uppercase text-5xl md:text-6xl lg:text-7xl xl:text-8xl lg:max-w-5xl xl:max-w-7xl 2xl:max-w-8xl py-2 text-center font-bold text-transparent bg-gradient-to-r from-[#ff660b] via-[#5083ff] to-[#ff660b] bg-[length:300%_300%] rainbow bg-clip-text"
 >
   Websites built with custom design and code
 </h1>
