fix white space in contact form

--- a/src/pages/contact-me.astro
+++ b/src/pages/contact-me.astro
@@ -24,13 +24,12 @@ import PageLayout from "../layout/PageLayout.astro";
         class="text-gray-500 text-center text-lg lg:text-xl xl:text-2xl max-w-[260px] md:max-w-lg lg:max-w-2xl leading-5"
       >
         <span>Let's make the</span>
-        <div class="inline-block relative">
-          <span class=""> best possible</span><HanddrawnCirle
-            styles="absolute bottom-0 w-full h-full"
-          />
-        </div>
+        <span class="inline-block relative">
+          <span class="whitespace-pre"> best possible</span>
+          <HanddrawnCirle styles="absolute bottom-0 w-full h-full" />
+        </span>
         <span> website for you</span>
-        <span class="text-xs font-normal">(within your budget)</span>
+        <span class="text-xs font-normal"> (within your budget)</span>
       </h2>
     </div>
 
