fix broken links

--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -70,7 +70,7 @@ const desktopNavLinksStyles = "text-base text-gray-500 hover:text-gray-800";
           text="Services"
           borderColour="border-[#FF9245]"
           arrowColour="stroke-[#FF9245]"
-          href="/"
+          href="/coming-soon"
         />
       </li>
       <li class="mt-6">
@@ -78,7 +78,7 @@ const desktopNavLinksStyles = "text-base text-gray-500 hover:text-gray-800";
           text="My work"
           borderColour="border-[#5083FF]"
           arrowColour="stroke-[#5083FF]"
-          href="/"
+          href="/coming-soon"
         />
       </li>
       <li class="mt-6">
@@ -86,7 +86,7 @@ const desktopNavLinksStyles = "text-base text-gray-500 hover:text-gray-800";
           text="About me"
           borderColour="border-[#6E6CCC]"
           arrowColour="stroke-[#6E6CCC]"
-          href="/"
+          href="/coming-soon"
         />
       </li>
       <li class="mt-20">
