refactor and restyle strikethrough

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,4 +22,4 @@ import BottomCTA from "../components/sections/homePage/BottomCTA.astro";
   </main>
 </PageLayout>
 
-<script src="../scripts/observer.ts"></script>
+<script src="../scripts/observer/setup.ts"></script>
