--- a/src/components/sections/homePage/NoTemplateSection.astro
+++ b/src/components/sections/homePage/NoTemplateSection.astro
@@ -32,7 +32,9 @@ import SmallPargraph from "../../ui/text/SmallPargraph.astro";
   <div
     class="mt-10 flex flex-col items-center gap-y-5 lg:gap-y-0 lg:flex-row lg:items-start lg:justify-center"
   >
-    <Success styles="w-80 md:w-[400px] lg:w-[500px] h-auto" />
+    <Success
+      styles="strike-throught-trigger w-80 md:w-[400px] lg:w-[500px] h-auto"
+    />
     <div>
       <SmallPargraph
         mt={false}
