--- a/src/components/sections/homePage/GuranteeSection.astro
+++ b/src/components/sections/homePage/GuranteeSection.astro
@@ -30,7 +30,7 @@ import SectionTitleH3 from "../../ui/text/SectionTitleH3.astro";
   <SectionTitleH3>
     <span class="flex flex-col items-center lg:flex-row">
       <span>Lifetime</span>
-      <div class="overflow-hidden diamond-target">
+      <div class="overflow-hidden">
         <span class="inline-block animate-diamond animate-paused"
           ><Diamond styles=" w-20 h-20" /></span
         >
@@ -52,7 +52,7 @@ import SectionTitleH3 from "../../ui/text/SectionTitleH3.astro";
 <div
   class="mt-5 flex flex-col lg:flex-row lg:justify-center items-center gap-2"
 >
-  <Zen styles="w-14 h-14 xl:w-16 xl:h-16" />
+  <Zen styles="section-gurantee-trigger w-14 h-14 xl:w-16 xl:h-16" />
   <h3 class="text-gray-800">Enjoy peace of mind</h3>
 </div>
 <div class="flex justify-center">
