--- a/src/components/sections/homePage/Testimonials.astro
+++ b/src/components/sections/homePage/Testimonials.astro
@@ -22,7 +22,9 @@ import CurlyArrow from "../../icons/CurlyArrow.astro";
   }
 </style>
 
-<div class="mt-20 flex flex-col items-center relative">
+<div
+  class="section-testimonial-trigger mt-36 flex flex-col items-center relative"
+>
   <div class="relative overflow-hidden">
     <div
       aria-hidden="true"
