--- a/src/components/sections/homePage/DesignAndCodeSection.astro
+++ b/src/components/sections/homePage/DesignAndCodeSection.astro
@@ -59,7 +59,9 @@ import SmallPargraph from "../../ui/text/SmallPargraph.astro";
 <div
   class="mt-10 flex flex-col gap-y-5 lg:gap-y-0 items-center lg:flex-row lg:items-start lg:justify-center"
 >
-  <CodeIllustration styles="w-80 md:w-[400px] lg:w-[500px] h-auto" />
+  <CodeIllustration
+    styles="section-code-and-design-trigger w-80 md:w-[400px] lg:w-[500px] h-auto"
+  />
   <div>
     <SmallPargraph
       mt={false}
